# axios_genie

./: .gitignore  Justfile  LICENSE
crates/axios_genie/: Cargo.toml
crates/axios_genie/src/: main.rs
crates/axios_genie/src/commands/: challange.rs  mod.rs
crates/axios_genie_db/: Cargo.toml
crates/axios_genie_db/migrations/: 20230127095809_user_challange_id.down.sql  20230127095809_user_challange_id.up.sql
crates/axios_genie_db/src/: challange.rs  lib.rs
