[package]
name = "axios_genie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
serenity = { version = "0.11.5", default-features = false, features = ["collector", "builder", "cache", "chrono", "client", "gateway", "model", "http", "utils"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
axios_genie_db = { path = "../axios_genie_db" }