[package]
name = "axios_genie_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
sqlx = { version ="0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "offline", "migrate"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
